--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^8.2.2",
+
     "prettier": "^3.2.5"
   },
   "dependencies": {
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "concurrently": "^8.2.2"
   }
 }
